--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Home
 ---
+
 
 <div id="menu">
 	<ul>
@@ -15,12 +15,10 @@ title: Home
 		<li><a href="archive.html">Older Posts &raquo;</a></li>
 	</ul>
 </div>
-<div id="post">
-	{% for post in site.posts offset: 0 limit: 1 %}
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.date | date_to_string }}
-       {{ post.content }}
 
-    {% endfor %}
+<div id="post">
+	<h2>{{ page.title }}</h2>
+  	{{ content }}
 </div>
-<div style="clear: both"></div>
+
+<a href="/">Back to Blog Home &raquo;</a>
