--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <title>CDMoyer's Blog</title>
 	<link rel="icon" href="http://24.media.tumblr.com/avatar_2a67ecbb67f0_16.png"/>
 	<link href='http://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Architects+Daughter' rel='stylesheet' type='text/css'>
+	<link href='/assets/pygments.css' rel='stylesheet' type='text/css'>
 	<style type="text/css">
 		body { 
 			background: #fff ;
