--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 
 <div id="menu">
 	<ul>
-	{% for post in site.posts offset: 0 limit: 15 %}
+	{% for post in site.related_posts offset: 0 limit: 15 %}
       <li><a href="{{ post.url }}">{{ post.title }}</a>
 		<br />
 		<div class="date">{{ post.date | date_to_string }}</div>
