Dynamic page titles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CDMoyer's Blog</title>
+	<title>{{ page.title }}</title>
 	<link rel="icon" href="http://24.media.tumblr.com/avatar_2a67ecbb67f0_16.png"/>
 	<link href='http://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Architects+Daughter' rel='stylesheet' type='text/css'>
 	<link href='/assets/pygments.css' rel='stylesheet' type='text/css'>
