--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,9 @@
 	<title>{{ page.title }}</title>
 	<link rel="icon" href="http://24.media.tumblr.com/avatar_2a67ecbb67f0_16.png"/>
 	<link href='http://fonts.googleapis.com/css?family=Annie+Use+Your+Telescope|Architects+Daughter' rel='stylesheet' type='text/css'>
+	<link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Atom feed">
 	<link href='/assets/pygments.css' rel='stylesheet' type='text/css'>
+		<li><a href="http://inarow.net/">CDMoyer's Home Page</a></li>
 	<style type="text/css">
 		body { 
 			background: #fff ;
@@ -15,7 +17,7 @@
 			line-height: 1.2em;
 		}
 
-		a {color: #00a; background-color:rgba(255,255,50,0.4); }
+		#menu .home a, a {color: #00a; background-color:rgba(255,255,50,0.4); }
 		a:visited {color: #000; }
 
 		h1, h2{  font-family: 'Architects Daughter', cursive; }
