--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,4 +22,6 @@ layout: default
   	{{ content }}
 </div>
 
+<br style="clear:both" />
+<br style="clear:both" />
 <a href="/">Back to Blog Home &raquo;</a>
