--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,11 +35,15 @@
             padding: 10px 10px 10px 30px;
             width: 650px;
 		}
+        cite { font-size: .8em }
+        cite a { color: #999; background-color: rgba(255,255,255,0);  }
 
         #hmm {
 			background-color: rgba(255,255,255,0.9); 
             width: 1020px; margin: 0px auto
         }
+
+        .photo { text-align: center; margin: 0px auto; }
 
 	</style>
 </head>
